--- a/Tic-Tac-Toe with AI/Easy does it/task-info.yaml
+++ b/Tic-Tac-Toe with AI/Easy does it/task-info.yaml
@@ -269,6 +269,343 @@ files:
         }
     }
   learner_created: false
+- name: src/tictactoe/Main.java
+  visible: true
+  text: |
+    package tictactoe;
+
+    import java.util.Scanner;
+
+    public class Main {
+        public static void main(String[] args) {
+            Scanner scanner = new Scanner(System.in);
+            System.out.print("Enter cells: ");
+            String stringFormat = scanner.nextLine();
+            GameMap gameMap = new GameMap();
+            gameMap.setGame(stringFormat);
+            gameMap.showGame();
+            int x = 5;
+            int y = 5;
+
+            boolean validAnswer = false;
+            do {
+                System.out.print("Enter the coordinates: ");
+                String position = scanner.nextLine();
+                try {
+                    String[] arr = position.split("\\s+");
+                    x = Integer.parseInt(arr[0]);
+                    y = Integer.parseInt(arr[1]);
+
+                } catch (NumberFormatException e) {
+                    System.out.println("You should enter numbers!");
+                    continue;
+                } catch (ArrayIndexOutOfBoundsException e) {
+                    System.out.println("You should enter 2 numbers!");
+                    continue;
+                }
+
+                if ( x < 1 || x > 3 || y < 1 || y > 3) {
+                    System.out.print("Coordinates should be from 1 to 3!\n");
+                    continue;
+                }
+
+                if (gameMap.getField().isEmpty(x, y)) {
+                    System.out.print("This cell is occupied! Choose another one!\n");
+                    continue;
+                }
+
+                validAnswer = true;
+
+            } while (!validAnswer);
+
+            if (!gameMap.makeMoveXY(x, y)) {
+                System.out.print("Error occupied when try to make move!");
+                System.exit(1);
+            }
+            gameMap.showGame();
+            System.out.println(gameMap.getStatus());
+        }
+    }
+  learner_created: true
+- name: src/tictactoe/GameMap.java
+  visible: true
+  text: |
+    package tictactoe;
+
+    import static tictactoe.Indicators.*;
+
+    public class GameMap {
+      private Game field;
+      GameMap() {
+        field = new Game("_________");
+      }
+
+
+      public void showGame() {
+        Indicators[][] arr = field.toArray();
+        System.out.print("---------\n");
+        for (int i = 2; i > -1 ; i--) {
+          System.out.print("| ");
+          for (int j = 0; j < 3; j++) {
+            System.out.print(arr[i][j] == EMPTY ? "  " : arr[i][j]+  " ");
+          }
+          System.out.print("|\n");
+        }
+        System.out.print("---------\n");
+      }
+
+      public void setGame(String stringFormat) {
+        field = new Game(stringFormat);
+      }
+
+      public Game getField() {
+        return field;
+      }
+
+      public boolean makeMoveXY(int x, int y) {
+        if (field.isEmpty(x, y)) {
+          return false;
+        }
+        Indicators indicators;
+        GameStatus status = field.getGameStatus();
+        switch (status) {
+          case X_TURN:
+            indicators = X;
+            break;
+          case O_TURN:
+            indicators = O;
+            break;
+          default:
+            return false;
+        }
+
+        field.setCell(x, y, indicators);
+        return true;
+      }
+
+      public GameStatus getStatus() {
+        return field.getGameStatus();
+      }
+    }
+  learner_created: true
+- name: src/tictactoe/Game.java
+  visible: true
+  text: |
+    package tictactoe;
+    import static tictactoe.Indicators.*;
+    import static tictactoe.GameStatus.*;
+
+    public class Game {
+      short field;
+
+      Game(String stringFormat){
+        int counter = 0;
+        short[][] f = new short[3][3];
+        for (int i = 2; i >= 0; i--) {
+          for (int j = 0; j < 3; j++) {
+            f[i][j] = Indicators.getValue(stringFormat.charAt(counter));
+            counter++;
+          }
+        }
+        field = 0;
+
+        for (int i = 2; i >= 0; i--) {
+          for (int j = 2; j >= 0; j--) {
+            field = (short)((field * 3) + f[i][j]);
+          }
+        }
+      }
+
+      public Indicators[][] toArray() {
+        short f = this.field;
+        Indicators[][] res = new Indicators[3][3];
+        for (int i = 0; i < 3; i++) {
+          for (int j = 0; j < 3; j++) {
+            res[i][j] = Indicators.getCondition((short)(f % 3));
+            f /= 3;
+          }
+        }
+        return res;
+      }
+    /*
+      public short getfiled() {
+        return field;
+      }*/
+      public Indicators getCellInXY(int x, int y) {
+        if ( x > 3 || x < 1 || y > 3 || y < 1) {
+          System.exit(1); //todo change to Exception;
+        }
+        switch ((field / (short) Math.pow(3, (y - 1) * 3 + x - 1)) % 3) {
+          case 1:
+            return X;
+          case 2:
+            return O;
+        }
+        return EMPTY;
+      }
+
+      public boolean isEmpty(int x, int y) {
+        return getCellInXY(x, y) != EMPTY;
+      }
+
+      private void setGame(Indicators[][] arr){
+        field = 0;
+        for (int i = 2; i >= 0; i--) {
+          for (int j = 2; j >= 0; j--) {
+            field = (short)((field * 3) + arr[i][j].getValue());
+          }
+        }
+      }
+
+      public void setCell(int x, int y, Indicators indicators) {
+        if ( x > 3 || x < 1 || y > 3 || y < 1) {
+          System.exit(1); //todo change to Exception;
+        }
+
+        Indicators[][] arr = toArray();
+        arr[y-1][x-1] = indicators;
+        setGame(arr);
+      }
+
+      public GameStatus getGameStatus() {
+        Indicators[][] f= toArray();
+        for (int i = 0; i < 3; i++) {
+          if (f[0][i] == f[1][i] && f[1][i] == f[2][i] && f[0][i] != EMPTY) {
+            if (f[0][i] == X) {
+              return X_WIN;
+            } else {
+              return O_WIN;
+            }
+          }
+          if (f[i][0] == f[i][1] && f[i][1] == f[i][2] && f[i][0] != EMPTY) {
+            if (f[i][0] == X) {
+              return X_WIN;
+            } else {
+              return O_WIN;
+            }
+          }
+        }
+
+
+        if (((f[1][1] == f[0][0] && f[1][1] == f[2][2])
+            || (f[1][1] == f[0][2] && f[1][1] == f[2][0]))
+            && f[1][1] != EMPTY) {
+          if (f[1][1] == X) {
+            return X_WIN;
+          } else {
+            return O_WIN;
+          }
+        }
+
+
+        int xCount = 0;
+        int oCount = 0;
+        for (int i = 0; i < 3; i++) {
+          for (int j = 0; j < 3; j++) {
+            switch (f[i][j]) {
+              case X:
+                xCount++;
+                break;
+              case O:
+                oCount++;
+                break;
+            }
+          }
+        }
+
+        if (xCount + oCount == 9) {
+          return DRAW;
+        }
+
+        if (xCount == oCount ) {
+          return X_TURN;
+        }
+
+        return O_TURN;
+      }
+    }
+  learner_created: true
+- name: src/tictactoe/Indicators.java
+  visible: true
+  text: |
+    package tictactoe;
+
+    public enum Indicators {
+      EMPTY('_', (short) 0),
+      X('X', (short) 1),
+      O('O', (short) 2);
+
+      private char name;
+      private short value;
+
+      Indicators(char name, short value){
+        this.value = value;
+        this.name = name;
+      }
+
+      public short getValue() {
+        return value;
+      }
+
+      public char getName() {
+        return name;
+      }
+
+      public static short getValue(char name) {
+        for (Indicators indicators : Indicators.values()) {
+          if (indicators.getName() == name) {
+            return indicators.getValue();
+          }
+        }
+        return 0;
+      }
+
+
+      public static Indicators getCondition(short value) {
+        for (Indicators indicators : Indicators.values()) {
+          if (indicators.getValue() == value) {
+            return indicators;
+          }
+        }
+        return EMPTY;
+      }
+
+      @Override
+      public String toString() {
+        return String.valueOf(name);
+      }
+    }
+  learner_created: true
+- name: src/tictactoe/GameStatus.java
+  visible: true
+  text: |
+    package tictactoe;
+
+    public enum  GameStatus {
+      X_TURN("Game not finished"),
+      O_TURN("Game not finished"),
+      DRAW("Draw"),
+      X_WIN("X wins"),
+      O_WIN("O wins ");
+
+      private String name;
+
+      GameStatus(String name) {
+        this.name = name;
+      }
+
+      @Override
+      public String toString() {
+        return name;
+      }
+    }
+  learner_created: true
+- name: src/tictactoe/Coordinates.java
+  visible: true
+  learner_created: true
+- name: src/tictactoe/TTRobot.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/81/stages/448/implement
-status: Unchecked
-record: -1
+status: Solved
+record: 2
